--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^6.36.2",
     "@hono/clerk-auth": "^3.0.3",
     "@hono/zod-validator": "^0.7.5",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -20,6 +21,7 @@
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-use": "^17.6.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.2.0"
   },
